# DocPatcher

./: .gitignore  README.md  Structure.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: apply.py  change_table.py  health.py  parse.py  project_pipeline.py  propose.py  report.py  retrieve.py
backend/app/core/: settings.py
backend/app/models/: block.py  candidate.py  change_table.py  doc_structure.py  project_pipeline.py  proposal.py  requirement.py  workspace.py
backend/app/services/: artifacts.py  change_table_store.py  document_extraction.py  docx_parser.py  extract_engine.py  extract_progress.py  patcher.py  project_execute.py  project_extract.py  project_init.py  project_plan.py  proposer.py  reporting.py  retriever.py  workspace.py
backend/app/services/llm/: artifact_sources.py  base.py  example_project_sources.py  extraction_prompts.py  mock_provider.py  openai_provider.py  openai_responses_composition.py  responses_model_params.py
backend/scripts/: execute_project.py
backend/tests/: test_apply_dry_run.py  test_document_extraction.py  test_docx_structure_parser.py  test_extract_progress.py  test_parse_smoke.py  test_project_extract.py  test_project_pipeline_services.py  test_retrieve_smoke.py  test_settings_paths.py
example_project/input_docs/: 審查費繳款資料表.docx  專家小組訪談 大綱.docx  專家焦點小組訪談 知情同意書.docx  工作坊 專家組 知情同意書.docx  工作坊研究  訪談大綱_.docx  工作坊研究 非專家組 知情同意書_.docx  新案審查申請書.docx  研究主持人與副主持人(指導教師)學術經歷簡表.docx  資料收集表 (非專家組)_.docx
example_project/instructions/: full_document_extraction.txt
scripts/: execute_project.py
(+9 files in other folders)
